@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2010, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2010, 2026, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -21,16 +21,22 @@
  * questions.
  */
 
+import org.junit.jupiter.api.AfterAll;
+import org.junit.jupiter.api.BeforeAll;
+import org.junit.jupiter.api.Test;
+
 import java.io.File;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
 import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URLDecoder;
 import java.nio.ByteBuffer;
 import java.nio.channels.Channels;
 import java.nio.channels.FileChannel;
 import java.nio.channels.SeekableByteChannel;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.DirectoryStream;
 import java.nio.file.FileAlreadyExistsException;
 import java.nio.file.FileStore;
@@ -52,8 +58,6 @@ import java.util.ArrayList;
 import java.util.Arrays;
 import java.util.Collections;
 import java.util.Enumeration;
-import java.util.HashMap;
-import java.util.HashSet;
 import java.util.Iterator;
 import java.util.LinkedList;
 import java.util.List;
@@ -68,6 +72,14 @@ import java.util.zip.ZipOutputStream;
 
 import static java.nio.file.StandardOpenOption.*;
 import static java.nio.file.StandardCopyOption.*;
+import static org.junit.jupiter.api.Assertions.assertArrayEquals;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNotEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
+import static org.junit.jupiter.api.Assertions.assertTrue;
+import static org.junit.jupiter.api.Assertions.fail;
 
 /*
  * Tests various zipfs operations.
@@ -78,197 +90,244 @@ import static java.nio.file.StandardCopyOption.*;
  *      8131067 8034802 8210899 8273961 8271079 8299864
  * @summary Test Zip filesystem provider
  * @modules jdk.zipfs
- * @run main ZipFSTester
- * @run main/othervm ZipFSTester
+ * @run junit ZipFSTester
+ * @run junit/othervm ZipFSTester
  */
-
 public class ZipFSTester {
-    public static void main(String[] args) throws Exception {
-        // create JAR file for test, actual contents don't matter
-        Path jarFile = Utils.createJarFile("tester.jar",
-                "META-INF/MANIFEST.MF",
-                "dir1/foo",
-                "dir2/bar",
-                "dir1/dir3/fooo");
-
-        try (FileSystem fs = newZipFileSystem(jarFile, Collections.emptyMap())) {
-            test0(fs);
-            test1(fs);
-            test2(fs);
-            testFileStoreNullArgs(fs); // more tests
-        }
-        testStreamChannel();
-        testTime(jarFile);
-        test8069211();
-        test8131067();
-    }
 
     private static final Random RDM = new Random();
 
-    static void test0(FileSystem fs)
-        throws Exception
-    {
+    // create JAR file for test, actual contents don't matter
+    static Path jarFile;
+    static String[] jarContents = new String[]{
+            "META-INF/MANIFEST.MF",
+            "dir1/foo",
+            "dir2/bar",
+            "dir1/dir3/fooo"
+    };
+
+    @BeforeAll
+    static void setup() throws Exception {
+        jarFile = Utils.createJarFile("tester.jar", jarContents);
+    }
+
+    @AfterAll
+    static void cleanup() throws IOException {
+        Files.deleteIfExists(jarFile);
+    }
+
+    @Test
+    void entryParentTest() throws Exception {
         List<String> list = new LinkedList<>();
-        try (ZipFile zf = new ZipFile(fs.toString())) {
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of());
+             ZipFile zf = new ZipFile(fs.toString())) {
             Enumeration<? extends ZipEntry> zes = zf.entries();
             while (zes.hasMoreElements()) {
                 list.add(zes.nextElement().getName());
             }
             for (String pname : list) {
                 Path path = fs.getPath(pname);
-                if (!Files.exists(path))
-                    throw new RuntimeException("path existence check failed!");
+                assertTrue(Files.exists(path), "path existence check failed!");
                 while ((path = path.getParent()) != null) {
-                    if (!Files.exists(path))
-                        throw new RuntimeException("parent existence check failed!");
+                    assertTrue(Files.exists(path), "parent existence check failed!");
                 }
             }
         }
     }
 
-    static void test1(FileSystem fs0)
-        throws Exception
-    {
-        // prepare a src for testing
-        Path src = getTempPath();
-        String tmpName = src.toString();
-        try (OutputStream os = Files.newOutputStream(src)) {
-            byte[] bits = new byte[12345];
-            RDM.nextBytes(bits);
-            os.write(bits);
+    // Validates ZipFS provider for expected UOE on directory and non-zip file input
+    @Test
+    void providerValidationUOETest() throws Exception {
+        var nonZipFile = getNonZipFile();
+        var tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            FileSystemProvider provider = fs.provider();
+            assertThrows(UnsupportedOperationException.class,
+                    () -> provider.newFileSystem(new File(System.getProperty("test.src", ".")).toPath(),
+                            Map.of()), "newFileSystem() opens a directory as zipfs");
+            assertThrows(UnsupportedOperationException.class,
+                    () -> provider.newFileSystem(nonZipFile, Map.of()),
+                    "newFileSystem() opens a non-zip file as zipfs");
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+            Files.deleteIfExists(nonZipFile);
         }
+    }
 
-        // clone a fs from fs0 and test on it
-        Path tmpfsPath = getTempPath();
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-        try (FileSystem copy = newZipFileSystem(tmpfsPath, env)) {
-            z2zcopy(fs0, copy, "/", 0);
+    // Validates ZipFS provider for expected FSAE on duplicate input
+    @Test
+    void providerValidationFSAETest() throws Exception {
+        var tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            FileSystemProvider provider = fs.provider();
+            assertThrows(FileSystemAlreadyExistsException.class,
+                    () -> provider.newFileSystem(pathToJarURI(tmpfsPath),
+                            Map.of()), "newFileSystem(URI...) does not throw exception");
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+        }
+    }
 
+    // Validates ZipFS provider for newFileSystem(Path, ...)
+    @Test
+    void providerValidationTest() throws Exception {
+        var tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            FileSystemProvider provider = fs.provider();
+            try (FileSystem _ = provider.newFileSystem(tmpfsPath, Map.of())) {}
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+        }
+    }
+
+    // Performs a sequence of operations where subsequent ops depend on previous state.
+    // Covers ops such as `copy`, `delete`, `move`
+    @Test
+    void entryCopyMoveDeleteFlowTest() throws Exception {
+        var src = getFile();
+        Path tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            // walk
+            walk(fs.getPath("/"));
+            // copyin
+            Path dst = getPathWithParents(fs, src.toString());
+            Files.copy(src, dst);
+            checkEqual(src, dst);
+            // copy
+            Path dst2 = getPathWithParents(fs, "/xyz" + RDM.nextInt(100) +
+                    "/efg" + RDM.nextInt(100) + "/foo.class");
+            Files.copy(dst, dst2);
+            // dst.moveTo(dst2);
+            checkEqual(src, dst2);
+            // delete
+            Files.delete(dst);
+            assertFalse(Files.exists(dst));
+            // moveout
+            Path dst3 = Paths.get(src + "_Tmp");
+            Files.move(dst2, dst3);
+            checkEqual(src, dst3);
+            assertFalse(Files.exists(dst2));
+            // copyback + move
+            Files.copy(dst3, dst);
+            Path dst4 = getPathWithParents(fs, src + "_Tmp0");
+            Files.move(dst, dst4);
+            checkEqual(src, dst4);
+            // delete
+            Files.delete(dst4);
+            assertFalse(Files.exists(dst4));
+            Files.delete(dst3);
+            assertFalse(Files.exists(dst3));
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+            Files.deleteIfExists(src);
+        }
+    }
+
+    // Verify existing entry can be renamed within zfs
+    @Test
+    void existingEntryMoveTest() throws Exception {
+        Path tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            // move (existing entry)
+            Path manifest = fs.getPath("META-INF/MANIFEST.MF");
+            if (Files.exists(manifest)) {
+                Path movedManifest = fs.getPath("META-INF/MANIFEST.MF_TMP");
+                Files.move(manifest, movedManifest);
+                // Ensure the move operation was successful
+                assertFalse(Files.exists(manifest));
+                assertTrue(Files.exists(movedManifest));
+                walk(fs.getPath("/"));
+            } else {
+                fail("Unexpected failure, manifest does not exist");
+            }
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+        }
+    }
+
+    // Verify some directory behavior: open dir as stream fails, correct cleanup of empty parent dir
+    @Test
+    void directoryOpsTest() throws Exception {
+        var src = getFile();
+        Path tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            Path pathWithParents = getPathWithParents(fs, "/xyz" + RDM.nextInt(100) +
+                    "/efg" + RDM.nextInt(100) + "/foo.class");
+            Files.copy(src, pathWithParents);
+            // Invoking `newInputStream` on directory should fail
+            Path parent = pathWithParents.getParent();
+            assertThrows(FileSystemException.class, () -> Files.newInputStream(parent));
+            Files.delete(pathWithParents);
+            // Clean up directory (when nested child is removed)
+            assertDoesNotThrow(() -> rmdirs(parent));
+            assertFalse(Files.exists(parent));
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+            Files.deleteIfExists(src);
+        }
+    }
+
+    // Verify some channel ops
+    @Test
+    void channelTest() throws Exception {
+        var src = getFile();
+        Path tmpfsPath = getTempZipPath();
+        createClonedZip(tmpfsPath);
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
+            Path dst = getPathWithParents(fs, src.toString());
+            // newFileChannel() copy in, out and verify via fch
+            fchCopy(src, dst);    // in
+            checkEqual(src, dst);
+            Path tmp = Paths.get(src + "_Tmp");
+            fchCopy(dst, tmp);   //  out
+            checkEqual(src, tmp);
+            Files.delete(tmp);
+            // test channels
+            channel(fs, dst);
+            Files.delete(dst);
+        } finally {
+            Files.deleteIfExists(tmpfsPath);
+            Files.deleteIfExists(src);
+        }
+    }
+
+    // Verify ZipFS can operate on nested zip file entry in another zip
+    @Test
+    void nestedZipContentsTest() throws Exception {
+        // Set up the nested behavior
+        var src = getFile();
+        Path tmpfsPath = getTempZipPath();
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of());
+             FileSystem copy = FileSystems.newFileSystem(tmpfsPath, Map.of("create", "true"))) {
+            z2zcopy(fs, copy, "/", 0);
             // copy the test jar itself in
-            Files.copy(Paths.get(fs0.toString()), copy.getPath("/foo.jar"));
+            Files.copy(Paths.get(fs.toString()), copy.getPath("/foo.jar"));
             Path zpath = copy.getPath("/foo.jar");
             try (FileSystem zzfs = FileSystems.newFileSystem(zpath)) {
                 Files.copy(src, zzfs.getPath("/srcInjarjar"));
             }
         }
-
-        try (FileSystem fs = newZipFileSystem(tmpfsPath, new HashMap<String, Object>())) {
-
-            FileSystemProvider provider = fs.provider();
-            // newFileSystem(path...) should not throw exception
-            try (FileSystem fsPath = provider.newFileSystem(tmpfsPath, new HashMap<String, Object>())){}
-            try (FileSystem fsUri = provider.newFileSystem(
-                     new URI("jar", tmpfsPath.toUri().toString(), null),
-                     new HashMap<String, Object>()))
-            {
-                throw new RuntimeException("newFileSystem(URI...) does not throw exception");
-            } catch (FileSystemAlreadyExistsException fsaee) {}
-
-            try {
-                provider.newFileSystem(new File(System.getProperty("test.src", ".")).toPath(),
-                                       new HashMap<String, Object>());
-                throw new RuntimeException("newFileSystem() opens a directory as zipfs");
-            } catch (UnsupportedOperationException uoe) {}
-
-            try {
-                provider.newFileSystem(src, new HashMap<String, Object>());
-                throw new RuntimeException("newFileSystem() opens a non-zip file as zipfs");
-            } catch (UnsupportedOperationException uoe) {}
-
-            // walk
-            walk(fs.getPath("/"));
-
-            // copyin
-            Path dst = getPathWithParents(fs, tmpName);
-            Files.copy(src, dst);
-            checkEqual(src, dst);
-
-            // copy
-            Path dst2 = getPathWithParents(fs, "/xyz" + RDM.nextInt(100) +
-                                           "/efg" + RDM.nextInt(100) + "/foo.class");
-            Files.copy(dst, dst2);
-            //dst.moveTo(dst2);
-            checkEqual(src, dst2);
-
-            // delete
-            Files.delete(dst);
-            if (Files.exists(dst))
-                throw new RuntimeException("Failed!");
-
-            // moveout
-            Path dst3 = Paths.get(tmpName + "_Tmp");
-            Files.move(dst2, dst3);
-            checkEqual(src, dst3);
-            if (Files.exists(dst2))
-                throw new RuntimeException("Failed!");
-
-            // copyback + move
-            Files.copy(dst3, dst);
-            Path dst4 = getPathWithParents(fs, tmpName + "_Tmp0");
-            Files.move(dst, dst4);
-            checkEqual(src, dst4);
-
-            // delete
-            Files.delete(dst4);
-            if (Files.exists(dst4))
-                throw new RuntimeException("Failed!");
-            Files.delete(dst3);
-            if (Files.exists(dst3))
-                throw new RuntimeException("Failed!");
-
-            // move (existing entry)
-            Path dst5 = fs.getPath("META-INF/MANIFEST.MF");
-            if (Files.exists(dst5)) {
-                Path dst6 = fs.getPath("META-INF/MANIFEST.MF_TMP");
-                Files.move(dst5, dst6);
-                walk(fs.getPath("/"));
-            }
-
-            // newInputStream on dir
-            Path parent = dst2.getParent();
-            try {
-                Files.newInputStream(parent);
-                throw new RuntimeException("Failed");
-            } catch (FileSystemException e) {
-                // expected fse
-            }
-
-            // rmdirs
-            try {
-                rmdirs(parent);
-            } catch (IOException x) {
-                x.printStackTrace();
-            }
-
-            // newFileChannel() copy in, out and verify via fch
-            fchCopy(src, dst);    // in
-            checkEqual(src, dst);
-            Path tmp = Paths.get(tmpName + "_Tmp");
-            fchCopy(dst, tmp);   //  out
-            checkEqual(src, tmp);
-            Files.delete(tmp);
-
-            // test channels
-            channel(fs, dst);
-            Files.delete(dst);
-
+        // Assertions
+        try (FileSystem fs = FileSystems.newFileSystem(pathToJarURI(tmpfsPath), Map.of())) {
             // test foo.jar in jar/zipfs #8034802
             Path jpath = fs.getPath("/foo.jar");
-            System.out.println("walking: " + jpath);
             try (FileSystem zzfs = FileSystems.newFileSystem(jpath)) {
                 walk(zzfs.getPath("/"));
                 // foojar:/srcInjarjar
                 checkEqual(src, zzfs.getPath("/srcInjarjar"));
-
-                dst = getPathWithParents(zzfs, tmpName);
+                var dst = getPathWithParents(zzfs, src.toString());
                 fchCopy(src, dst);
                 checkEqual(src, dst);
-                tmp = Paths.get(tmpName + "_Tmp");
+                Path tmp = Paths.get(src + "_Tmp");
                 fchCopy(dst, tmp);   //  out
                 checkEqual(src, tmp);
                 Files.delete(tmp);
-
                 channel(zzfs, dst);
                 Files.delete(dst);
             }
@@ -278,35 +337,33 @@ public class ZipFSTester {
         }
     }
 
-    static void test2(FileSystem fs) throws Exception {
-
-        Path fs1Path = getTempPath();
-        Path fs2Path = getTempPath();
-        Path fs3Path = getTempPath();
+    @Test
+    void concurrentCopyTest() throws Exception {
+        Path fs1Path = getTempZipPath();
+        Path fs2Path = getTempZipPath();
+        Path fs3Path = getTempZipPath();
 
         // create a new filesystem, copy everything from fs
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-        FileSystem fs0 = newZipFileSystem(fs1Path, env);
+        var env = Map.of("create", "true");
+        FileSystem fs0 = FileSystems.newFileSystem(fs1Path, env);
 
-        final FileSystem fs2 = newZipFileSystem(fs2Path, env);
-        final FileSystem fs3 = newZipFileSystem(fs3Path, env);
+        final FileSystem fs2 = FileSystems.newFileSystem(fs2Path, env);
+        final FileSystem fs3 = FileSystems.newFileSystem(fs3Path, env);
 
         System.out.println("copy src: fs -> fs0...");
-        z2zcopy(fs, fs0, "/", 0);   // copy fs -> fs1
-        fs0.close();                // dump to file
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of())) {
+            z2zcopy(fs, fs0, "/", 0);   // copy fs -> fs1
+            fs0.close();                // dump to file
 
-        System.out.println("open fs0 as fs1");
-        env = new HashMap<String, Object>();
-        final FileSystem fs1 = newZipFileSystem(fs1Path, env);
+            System.out.println("open fs0 as fs1");
+            final FileSystem fs1 = FileSystems.newFileSystem(fs1Path, Map.of());
 
-        System.out.println("listing...");
-        final ArrayList<String> files = new ArrayList<>();
-        final ArrayList<String> dirs = new ArrayList<>();
-        list(fs1.getPath("/"), files, dirs);
+            System.out.println("listing...");
+            final ArrayList<String> files = new ArrayList<>();
+            final ArrayList<String> dirs = new ArrayList<>();
+            list(fs1.getPath("/"), files, dirs);
 
-        Thread t0 = new Thread(new Runnable() {
-            public void run() {
+            Thread t0 = new Thread(() -> {
                 List<String> list = new ArrayList<>(dirs);
                 Collections.shuffle(list);
                 for (String path : list) {
@@ -316,12 +373,9 @@ public class ZipFSTester {
                         x.printStackTrace();
                     }
                 }
-            }
+            });
 
-        });
-
-        Thread t1 = new Thread(new Runnable() {
-            public void run() {
+            Thread t1 = new Thread(() -> {
                 List<String> list = new ArrayList<>(dirs);
                 Collections.shuffle(list);
                 for (String path : list) {
@@ -331,12 +385,9 @@ public class ZipFSTester {
                         x.printStackTrace();
                     }
                 }
-            }
+            });
 
-        });
-
-        Thread t2 = new Thread(new Runnable() {
-            public void run() {
+            Thread t2 = new Thread(() -> {
                 List<String> list = new ArrayList<>(dirs);
                 Collections.shuffle(list);
                 for (String path : list) {
@@ -346,12 +397,9 @@ public class ZipFSTester {
                         x.printStackTrace();
                     }
                 }
-            }
+            });
 
-        });
-
-        Thread t3 = new Thread(new Runnable() {
-            public void run() {
+            Thread t3 = new Thread(() -> {
                 List<String> list = new ArrayList<>(files);
                 Collections.shuffle(list);
                 while (!list.isEmpty()) {
@@ -370,52 +418,57 @@ public class ZipFSTester {
                         }
                     }
                 }
+            });
+
+            System.out.println("copying/removing...");
+            t0.start();
+            t1.start();
+            t2.start();
+            t3.start();
+            t0.join();
+            t1.join();
+            t2.join();
+            t3.join();
+
+            System.out.println("closing: fs1, fs2");
+            fs1.close();
+            fs2.close();
+
+            int failed = 0;
+            System.out.println("checkEqual: fs vs fs3");
+            for (String path : files) {
+                try {
+                    checkEqual(fs.getPath(path), fs3.getPath(path));
+                } catch (IOException x) {
+                    //x.printStackTrace();
+                    failed++;
+                }
             }
+            System.out.println("closing: fs3");
+            fs3.close();
 
-        });
+            System.out.println("opening: fs3 as fs4");
+            FileSystem fs4 = FileSystems.newFileSystem(fs3Path, Map.of());
 
-        System.out.println("copying/removing...");
-        t0.start(); t1.start(); t2.start(); t3.start();
-        t0.join(); t1.join(); t2.join(); t3.join();
 
-        System.out.println("closing: fs1, fs2");
-        fs1.close();
-        fs2.close();
+            ArrayList<String> files2 = new ArrayList<>();
+            ArrayList<String> dirs2 = new ArrayList<>();
+            list(fs4.getPath("/"), files2, dirs2);
 
-        int failed = 0;
-        System.out.println("checkEqual: fs vs fs3");
-        for (String path : files) {
-            try {
-                checkEqual(fs.getPath(path), fs3.getPath(path));
-            } catch (IOException x) {
-                //x.printStackTrace();
-                failed++;
+            System.out.println("checkEqual: fs vs fs4");
+            for (String path : files2) {
+                checkEqual(fs.getPath(path), fs4.getPath(path));
             }
+            System.out.println("walking: fs4");
+            walk(fs4.getPath("/"));
+            System.out.println("closing: fs4");
+            fs4.close();
+            System.out.printf("failed=%d%n", failed);
+
+            Files.delete(fs1Path);
+            Files.delete(fs2Path);
+            Files.delete(fs3Path);
         }
-        System.out.println("closing: fs3");
-        fs3.close();
-
-        System.out.println("opening: fs3 as fs4");
-        FileSystem fs4 = newZipFileSystem(fs3Path, env);
-
-
-        ArrayList<String> files2 = new ArrayList<>();
-        ArrayList<String> dirs2 = new ArrayList<>();
-        list(fs4.getPath("/"), files2, dirs2);
-
-        System.out.println("checkEqual: fs vs fs4");
-        for (String path : files2) {
-            checkEqual(fs.getPath(path), fs4.getPath(path));
-        }
-        System.out.println("walking: fs4");
-        walk(fs4.getPath("/"));
-        System.out.println("closing: fs4");
-        fs4.close();
-        System.out.printf("failed=%d%n", failed);
-
-        Files.delete(fs1Path);
-        Files.delete(fs2Path);
-        Files.delete(fs3Path);
     }
 
     static final int METHOD_STORED     = 0;
@@ -448,29 +501,21 @@ public class ZipFSTester {
         CRC32 crc32 = new CRC32();
         crc32.update(expected);
 
-        if (((Long)Files.getAttribute(path, "zip:crc")).intValue() !=
-            (int)crc32.getValue()) {
-            System.out.printf(" getAttribute.crc <%s> failed %x vs %x ...%n",
+        assertEquals((int)crc32.getValue(), ((Long)Files.getAttribute(path, "zip:crc")).intValue(),
+                " getAttribute.crc <%s> failed %x vs %x ...%n".formatted(
                               path.toString(),
                               ((Long)Files.getAttribute(path, "zip:crc")).intValue(),
-                              (int)crc32.getValue());
-            throw new RuntimeException("CHECK FAILED!");
-        }
+                              (int)crc32.getValue()));
 
-        if (((Long)Files.getAttribute(path, "zip:size")).intValue() != expected.length) {
-            System.out.printf(" getAttribute.size <%s> failed %x vs %x ...%n",
+        assertEquals(expected.length, ((Long)Files.getAttribute(path, "zip:size")).intValue(),
+                " getAttribute.size <%s> failed %x vs %x ...%n".formatted(
                               path.toString(),
                               ((Long)Files.getAttribute(path, "zip:size")).intValue(),
-                              expected.length);
-            throw new RuntimeException("CHECK FAILED!");
-        }
+                              expected.length));
 
         //streams
         try (InputStream is = Files.newInputStream(path)) {
-            if (!Arrays.equals(is.readAllBytes(), expected)) {
-                System.out.printf(" newInputStream <%s> failed...%n", path.toString());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertArrayEquals(expected, is.readAllBytes(), " newInputStream <%s> failed...%n".formatted(path.toString()));
         }
 
         // channels -- via sun.nio.ch.ChannelInputStream
@@ -478,17 +523,12 @@ public class ZipFSTester {
             InputStream is = Channels.newInputStream(sbc)) {
 
             // check all bytes match
-            if (!Arrays.equals(is.readAllBytes(), expected)) {
-                System.out.printf(" newByteChannel <%s> failed...%n", path.toString());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertArrayEquals(expected, is.readAllBytes(),
+                    " newByteChannel <%s> failed...%n".formatted(path.toString()));
 
             // Check if read position is at the end
-            if (sbc.position() != expected.length) {
-                System.out.printf("pos [%s]: size=%d, position=%d%n",
-                                  path.toString(), expected.length, sbc.position());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(expected.length, sbc.position(), "pos [%s]: size=%d, position=%d%n".formatted(
+                                  path.toString(), expected.length, sbc.position()));
 
             // Check position(x) + read() at the random/specific pos/len
             byte[] buf = new byte[1024];
@@ -503,22 +543,21 @@ public class ZipFSTester {
                 // System.out.printf("  --> %d, %d%n", pos, len);
                 bb.position(0).limit(len);    // bb.flip().limit(len);
                 int expectedReadResult = sbc.size() == 0 ? -1 : len;
-                if (sbc.position(pos).position() != pos ||
+                assertFalse(sbc.position(pos).position() != pos ||
                     sbc.read(bb) != expectedReadResult ||
-                    !Arrays.equals(buf, 0, bb.position(), expected, pos, pos + len)) {
-                    System.out.printf("read()/position() failed%n");
-                    throw new RuntimeException("CHECK FAILED!");
-                }
+                    !Arrays.equals(buf, 0, bb.position(), expected, pos, pos + len),
+                        "read()/position() failed%n");
             }
         } catch (IOException x) {
             x.printStackTrace();
-            throw new RuntimeException("CHECK FAILED!");
+            fail("CHECK FAILED!");
         }
     }
 
     // test entry stream/channel reading
-    static void testStreamChannel() throws Exception {
-        Path zpath = getTempPath();
+    @Test
+    void testStreamChannel() throws Exception {
+        Path zpath = getTempZipPath();
         try {
             var crc = new CRC32();
             Object[][] entries = getEntries();
@@ -542,7 +581,7 @@ public class ZipFSTester {
                    zos.closeEntry();
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Collections.emptyMap())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     Path path = zfs.getPath((String)e[0]);
                     byte[] bytes = (byte[])e[2];
@@ -552,7 +591,7 @@ public class ZipFSTester {
             Files.deleteIfExists(zpath);
 
             // [2] create zip via zfs.newByteChannel
-            try (var zfs = newZipFileSystem(zpath, Map.of("create", "true"))) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of("create", "true"))) {
                 for (Object[] e : entries) {
                     //  tbd: method is not used
                     try (var sbc = Files.newByteChannel(zfs.getPath((String)e[0]),
@@ -561,7 +600,7 @@ public class ZipFSTester {
                     }
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Collections.emptyMap())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     checkRead(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
@@ -569,12 +608,12 @@ public class ZipFSTester {
             Files.deleteIfExists(zpath);
 
             // [3] create zip via Files.write()/newoutputStream/
-            try (var zfs = newZipFileSystem(zpath, Map.of("create", "true"))) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of("create", "true"))) {
                 for (Object[] e : entries) {
                     Files.write(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Collections.emptyMap())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     checkRead(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
@@ -582,7 +621,7 @@ public class ZipFSTester {
             Files.deleteIfExists(zpath);
 
             // [4] create zip via zfs.newByteChannel, with "method_stored"
-            try (var zfs = newZipFileSystem(zpath,
+            try (var zfs = FileSystems.newFileSystem(zpath,
                     Map.of("create", true, "noCompression", true))) {
                 for (Object[] e : entries) {
                     try (var sbc = Files.newByteChannel(zfs.getPath((String)e[0]),
@@ -591,7 +630,7 @@ public class ZipFSTester {
                     }
                 }
             }
-            try (var zfs = newZipFileSystem(zpath, Collections.emptyMap())) {
+            try (var zfs = FileSystems.newFileSystem(zpath, Map.of())) {
                 for (Object[] e : entries) {
                     checkRead(zfs.getPath((String)e[0]), (byte[])e[2]);
                 }
@@ -604,20 +643,20 @@ public class ZipFSTester {
     }
 
     // test file stamp
-    static void testTime(Path src) throws Exception {
+    @Test
+    void testTime() throws Exception {
+        var jar = Utils.createJarFile(System.currentTimeMillis() + ".jar", jarContents);
         BasicFileAttributes attrs = Files
-                        .getFileAttributeView(src, BasicFileAttributeView.class)
+                        .getFileAttributeView(jar, BasicFileAttributeView.class)
                         .readAttributes();
         // create a new filesystem, copy this file into it
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-        Path fsPath = getTempPath();
-        try (FileSystem fs = newZipFileSystem(fsPath, env)) {
+        Path fsPath = getTempZipPath();
+        try (FileSystem fs = FileSystems.newFileSystem(fsPath, Map.of("create", "true"))) {
             System.out.println("test copy with timestamps...");
             // copyin
-            Path dst = getPathWithParents(fs, "me");
-            Files.copy(src, dst, COPY_ATTRIBUTES);
-            checkEqual(src, dst);
+            Path dst = fs.getPath("me");
+            Files.copy(jar, dst, COPY_ATTRIBUTES);
+            checkEqual(jar, dst);
             System.out.println("mtime: " + attrs.lastModifiedTime());
             System.out.println("ctime: " + attrs.creationTime());
             System.out.println("atime: " + attrs.lastAccessTime());
@@ -630,65 +669,43 @@ public class ZipFSTester {
             System.out.println("atime: " + dstAttrs.lastAccessTime());
 
             // 1-second granularity
-            if (attrs.lastModifiedTime().to(TimeUnit.SECONDS) !=
-                dstAttrs.lastModifiedTime().to(TimeUnit.SECONDS) ||
-                attrs.lastAccessTime().to(TimeUnit.SECONDS) !=
-                dstAttrs.lastAccessTime().to(TimeUnit.SECONDS) ||
-                attrs.creationTime().to(TimeUnit.SECONDS) !=
-                dstAttrs.creationTime().to(TimeUnit.SECONDS)) {
-                throw new RuntimeException("Timestamp Copy Failed!");
-            }
+            assertEquals(attrs.lastModifiedTime().to(TimeUnit.SECONDS),
+                    dstAttrs.lastModifiedTime().to(TimeUnit.SECONDS), "Last modified time incorrect");
+            assertEquals(attrs.lastAccessTime().to(TimeUnit.SECONDS),
+                    dstAttrs.lastAccessTime().to(TimeUnit.SECONDS), "Last access time incorrect");
+            assertEquals(attrs.creationTime().to(TimeUnit.SECONDS),
+                    dstAttrs.creationTime().to(TimeUnit.SECONDS), "Last creation time incorrect");
         } finally {
-            Files.delete(fsPath);
+            Files.deleteIfExists(fsPath);
+            Files.deleteIfExists(jar);
         }
     }
 
-    static void test8069211() throws Exception {
+    @Test
+    void test8069211() throws Exception {
         // create a new filesystem, copy this file into it
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-        Path fsPath = getTempPath();
-        try (FileSystem fs = newZipFileSystem(fsPath, env);) {
+        Path fsPath = getTempZipPath();
+        try (FileSystem fs = FileSystems.newFileSystem(fsPath, Map.of("create", "true"))) {
             OutputStream out = Files.newOutputStream(fs.getPath("/foo"));
             out.write("hello".getBytes());
             out.close();
-            out.close();
+            out.close(); // Intentional second `close` invocation
         }
-        try (FileSystem fs = newZipFileSystem(fsPath, new HashMap<String, Object>())) {
-            if (!Arrays.equals(Files.readAllBytes(fs.getPath("/foo")),
-                               "hello".getBytes())) {
-                throw new RuntimeException("entry close() failed");
-            }
+        try (FileSystem fs = FileSystems.newFileSystem(fsPath, Map.of())) {
+            assertArrayEquals("hello".getBytes(), Files.readAllBytes(fs.getPath("/foo")),
+                    "Second `close` on entry output stream corrupted /foo");
         } catch (Exception x) {
-            throw new RuntimeException("entry close() failed", x);
+            fail("Second `close` on entry output stream causes unexpected error", x);
         } finally {
             Files.delete(fsPath);
         }
     }
 
-    static void test8131067() throws Exception {
-        Map<String, Object> env = new HashMap<String, Object>();
-        env.put("create", "true");
-
+    @Test
+    void test8131067() throws Exception {
         // file name with space character for URI to quote it
-        File tmp = File.createTempFile("test zipfs", "zip");
-        tmp.delete();    // we need a clean path, no file
-        Path fsPath = tmp.toPath();
-        try (FileSystem fs = newZipFileSystem(fsPath, env);) {
-            Files.write(fs.getPath("/foo"), "hello".getBytes());
-            URI fooUri = fs.getPath("/foo").toUri();
-            if (!Arrays.equals(Files.readAllBytes(Paths.get(fooUri)),
-                               "hello".getBytes())) {
-                throw new RuntimeException("entry close() failed");
-            }
-        } finally {
-            Files.delete(fsPath);
-        }
-    }
-
-    private static FileSystem newZipFileSystem(Path path, Map<String, ?> env)
-        throws Exception
-    {
+        Path fsPath = Files.createTempFile(Path.of("."), "test zipfs", ".zip");
+        Files.delete(fsPath); // we need a clean path, no file
         // Use URLDecoder (for test only) to remove the double escaped space
         // character. For the path which is not encoded by UTF-8, we need to
         // replace "+" by "%2b" manually before feeding into the decoder.
@@ -700,16 +717,83 @@ public class ZipFSTester {
         //
         // Also, we should not use URLEncoder in case of the path has been
         // encoded.
-        return FileSystems.newFileSystem(
-            new URI("jar", URLDecoder.decode(path.toUri().toString()
-                            .replace("+", "%2b"), "utf8"), null), env, null);
+        try (FileSystem fs = FileSystems.newFileSystem(new URI("jar",
+                URLDecoder.decode(fsPath.toUri().toString().replace("+", "%2b"), StandardCharsets.UTF_8),
+                null), Map.of("create", "true"))) {
+            Files.write(fs.getPath("/foo"), "hello".getBytes());
+            URI fooUri = fs.getPath("/foo").toUri();
+            assertArrayEquals("hello".getBytes(), Files.readAllBytes(Paths.get(fooUri)),
+                    "entry close() failed");
+        } finally {
+            Files.deleteIfExists(fsPath);
+        }
     }
 
-    private static Path getTempPath() throws IOException
-    {
-        File tmp = File.createTempFile("testzipfs_", "zip");
-        tmp.delete();    // we need a clean path, no file
-        return tmp.toPath();
+    /**
+     * Tests if certain methods throw a NullPointerException if invoked with null
+     * as specified in java.nio.file.package-info.java
+     *
+     * @see 8299864
+     */
+    @Test
+    void testFileStoreNullArgs() throws Exception {
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of())) {
+            // file system containing at least one ZipFileStore
+            FileStore store = fs.getFileStores().iterator().next();
+
+            // Make sure we are testing the right thing
+            assertEquals("jdk.nio.zipfs.ZipFileStore", store.getClass().getName());
+
+            assertThrows(NullPointerException.class, () -> store.supportsFileAttributeView((String) null));
+            assertThrows(NullPointerException.class, () -> store.supportsFileAttributeView((Class<? extends FileAttributeView>) null));
+            assertThrows(NullPointerException.class, () -> store.getAttribute(null));
+            assertThrows(NullPointerException.class, () -> store.getFileStoreAttributeView(null));
+        }
+    }
+
+    private static Path getTempNonZipPath() throws IOException {
+        var path = Files.createTempFile(
+                Path.of("."), "testzipfs_", ".foo");
+        Files.delete(path);
+        return path;
+    }
+
+    private static Path getTempZipPath() throws IOException {
+        var path = Files.createTempFile(
+                Path.of("."), "testzipfs_", ".zip");
+        Files.delete(path);
+        return path;
+    }
+
+    private static Path getNonZipFile() throws IOException {
+        var src = getTempNonZipPath();
+        writeRandomBytes(src);
+        return src;
+    }
+
+    static Path getFile() throws IOException {
+        Path src = getTempZipPath();
+        writeRandomBytes(src);
+        return src;
+    }
+
+    private static void writeRandomBytes(Path src) throws IOException {
+        try (OutputStream os = Files.newOutputStream(src)) {
+            byte[] bits = new byte[12345];
+            RDM.nextBytes(bits);
+            os.write(bits);
+        }
+    }
+
+    private static void createClonedZip(Path tmpfsPath) throws Exception {
+        try (var fs = FileSystems.newFileSystem(jarFile, Map.of());
+             FileSystem copy = FileSystems.newFileSystem(tmpfsPath, Map.of("create", "true"))) {
+            z2zcopy(fs, copy, "/", 0);
+        }
+    }
+
+    private static URI pathToJarURI(Path path) throws URISyntaxException {
+        return new URI("jar", path.toUri().toString(), null);
     }
 
     private static void list(Path path, List<String> files, List<String> dirs )
@@ -736,7 +820,7 @@ public class ZipFSTester {
         if (Files.isDirectory(srcPath)) {
             if (!Files.exists(dstPath)) {
                 try {
-                    mkdirs(dstPath);
+                    Files.createDirectories(dstPath);
                 } catch (FileAlreadyExistsException x) {}
             }
             try (DirectoryStream<Path> ds = Files.newDirectoryStream(srcPath)) {
@@ -774,7 +858,7 @@ public class ZipFSTester {
 
         if (Files.isDirectory(srcPath)) {
             if (!Files.exists(dstPath))
-                mkdirs(dstPath);
+                Files.createDirectories(dstPath);
             try (DirectoryStream<Path> ds = Files.newDirectoryStream(srcPath)) {
                 for (Path child : ds) {
                     z2zmove(src, dst,
@@ -785,7 +869,7 @@ public class ZipFSTester {
             //System.out.println("moving..." + path);
             Path parent = dstPath.getParent();
             if (parent != null && Files.notExists(parent))
-                mkdirs(parent);
+                Files.createDirectories(parent);
             Files.move(srcPath, dstPath);
         }
     }
@@ -832,18 +916,6 @@ public class ZipFSTester {
         });
     }
 
-    private static void mkdirs(Path path) throws IOException {
-        if (Files.exists(path))
-            return;
-        path = path.toAbsolutePath();
-        Path parent = path.getParent();
-        if (parent != null) {
-            if (Files.notExists(parent))
-                mkdirs(parent);
-        }
-        Files.createDirectory(path);
-    }
-
     private static void rmdirs(Path path) throws IOException {
         while (path != null && path.getNameCount() != 0) {
             Files.delete(path);
@@ -868,19 +940,13 @@ public class ZipFSTester {
                 int nDst = 0;
                 while (nDst < nSrc) {
                     int n = isDst.read(bufDst, nDst, nSrc - nDst);
-                    if (n == -1) {
-                        System.out.printf("checking <%s> vs <%s>...%n",
-                                          src.toString(), dst.toString());
-                        throw new RuntimeException("CHECK FAILED!");
-                    }
+                    assertNotEquals(-1, n, "checking <%s> vs <%s>...%n".formatted(
+                                          src.toString(), dst.toString()));
                     nDst += n;
                 }
                 while (--nSrc >= 0) {
-                    if (bufSrc[nSrc] != bufDst[nSrc]) {
-                        System.out.printf("checking <%s> vs <%s>...%n",
-                                          src.toString(), dst.toString());
-                        throw new RuntimeException("CHECK FAILED!");
-                    }
+                    assertEquals(bufSrc[nSrc], bufDst[nSrc], "checking <%s> vs <%s>...%n".formatted(
+                                          src.toString(), dst.toString()));
                     nSrc--;
                 }
             }
@@ -890,29 +956,20 @@ public class ZipFSTester {
         try (SeekableByteChannel chSrc = Files.newByteChannel(src);
              SeekableByteChannel chDst = Files.newByteChannel(dst))
         {
-            if (chSrc.size() != chDst.size()) {
-                System.out.printf("src[%s].size=%d, dst[%s].size=%d%n",
+            assertEquals(chSrc.size(), chDst.size(), "src[%s].size=%d, dst[%s].size=%d%n".formatted(
                                   chSrc.toString(), chSrc.size(),
-                                  chDst.toString(), chDst.size());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+                                  chDst.toString(), chDst.size()));
             ByteBuffer bbSrc = ByteBuffer.allocate(8192);
             ByteBuffer bbDst = ByteBuffer.allocate(8192);
 
             int nSrc = 0;
             while ((nSrc = chSrc.read(bbSrc)) != -1) {
                 int nDst = chDst.read(bbDst);
-                if (nSrc != nDst) {
-                    System.out.printf("checking <%s> vs <%s>...%n",
-                                      src.toString(), dst.toString());
-                    throw new RuntimeException("CHECK FAILED!");
-                }
+                assertEquals(nSrc, nDst,
+                        "checking <%s> vs <%s>...%n".formatted(src.toString(), dst.toString()));
                 while (--nSrc >= 0) {
-                    if (bbSrc.get(nSrc) != bbDst.get(nSrc)) {
-                        System.out.printf("checking <%s> vs <%s>...%n",
-                                          src.toString(), dst.toString());
-                        throw new RuntimeException("CHECK FAILED!");
-                    }
+                    assertEquals(bbSrc.get(nSrc), bbDst.get(nSrc),
+                            "checking <%s> vs <%s>...%n".formatted(src.toString(), dst.toString()));
                     nSrc--;
                 }
                 bbSrc.flip();
@@ -920,18 +977,12 @@ public class ZipFSTester {
             }
 
             // Check if source read position is at the end
-            if (chSrc.position() != chSrc.size()) {
-                System.out.printf("src[%s]: size=%d, position=%d%n",
-                                  chSrc.toString(), chSrc.size(), chSrc.position());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(chSrc.position(), chSrc.size(), "src[%s]: size=%d, position=%d%n".formatted(
+                                  chSrc.toString(), chSrc.size(), chSrc.position()));
 
             // Check if destination read position is at the end
-            if (chDst.position() != chDst.size()) {
-                System.out.printf("dst[%s]: size=%d, position=%d%n",
-                                  chDst.toString(), chDst.size(), chDst.position());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(chDst.position(), chDst.size(), "dst[%s]: size=%d, position=%d%n".formatted(
+                                  chDst.toString(), chDst.size(), chDst.position()));
 
             // Check position(x) + read() at the specific pos/len
             for (int i = 0; i < 10; i++) {
@@ -954,11 +1005,8 @@ public class ZipFSTester {
 
     private static void fchCopy(Path src, Path dst) throws IOException
     {
-        Set<OpenOption> read = new HashSet<>();
-        read.add(READ);
-        Set<OpenOption> openwrite = new HashSet<>();
-        openwrite.add(CREATE_NEW);
-        openwrite.add(WRITE);
+        Set<OpenOption> read = Set.of(READ);
+        Set<OpenOption> openwrite = Set.of(CREATE_NEW, WRITE);
 
         try (FileChannel srcFc = src.getFileSystem()
                                     .provider()
@@ -978,11 +1026,8 @@ public class ZipFSTester {
 
     private static void chCopy(Path src, Path dst) throws IOException
     {
-        Set<OpenOption> read = new HashSet<>();
-        read.add(READ);
-        Set<OpenOption> openwrite = new HashSet<>();
-        openwrite.add(CREATE_NEW);
-        openwrite.add(WRITE);
+        Set<OpenOption> read = Set.of(READ);
+        Set<OpenOption> openwrite = Set.of(CREATE_NEW, WRITE);
 
         try (SeekableByteChannel srcCh = Files.newByteChannel(src, read);
              SeekableByteChannel dstCh = Files.newByteChannel(dst, openwrite))
@@ -996,18 +1041,12 @@ public class ZipFSTester {
             }
 
             // Check if source read position is at the end
-            if (srcCh.position() != srcCh.size()) {
-                System.out.printf("src[%s]: size=%d, position=%d%n",
-                                  srcCh.toString(), srcCh.size(), srcCh.position());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(srcCh.position(), srcCh.size(), "src[%s]: size=%d, position=%d%n".formatted(
+                                  srcCh.toString(), srcCh.size(), srcCh.position()));
 
             // Check if destination write position is at the end
-            if (dstCh.position() != dstCh.size()) {
-                System.out.printf("dst[%s]: size=%d, position=%d%n",
-                                  dstCh.toString(), dstCh.size(), dstCh.position());
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(dstCh.position(), dstCh.size(), "dst[%s]: size=%d, position=%d%n".formatted(
+                                  dstCh.toString(), dstCh.size(), dstCh.position()));
         }
     }
 
@@ -1028,8 +1067,7 @@ public class ZipFSTester {
         throws Exception
     {
         System.out.println("test ByteChannel...");
-        Set<OpenOption> read = new HashSet<>();
-        read.add(READ);
+        Set<OpenOption> read = Set.of(READ);
         int n = 0;
         ByteBuffer bb = null;
         ByteBuffer bb2 = null;
@@ -1037,17 +1075,13 @@ public class ZipFSTester {
 
         try (SeekableByteChannel sbc = Files.newByteChannel(path)) {
             System.out.printf("   sbc[0]: pos=%d, size=%d%n", sbc.position(), sbc.size());
-            if (sbc.position() != 0) {
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(0, sbc.position());
 
             bb = ByteBuffer.allocate((int)sbc.size());
             n = sbc.read(bb);
             System.out.printf("   sbc[1]: read=%d, pos=%d, size=%d%n",
                               n, sbc.position(), sbc.size());
-            if (sbc.position() != sbc.size()) {
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(sbc.position(), sbc.size());
             bb2 = ByteBuffer.allocate((int)sbc.size());
         }
 
@@ -1057,16 +1091,13 @@ public class ZipFSTester {
             sbc.position(N);
             System.out.printf("   sbc[2]: pos=%d, size=%d%n",
                               sbc.position(), sbc.size());
-            if (sbc.position() != N) {
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertEquals(N, sbc.position());
             bb2.limit(100);
             n = sbc.read(bb2);
             System.out.printf("   sbc[3]: read=%d, pos=%d, size=%d%n",
                               n, sbc.position(), sbc.size());
-            if (n < 0 || sbc.position() != (N + n)) {
-                throw new RuntimeException("CHECK FAILED!");
-            }
+            assertFalse(n < 0);
+            assertFalse(sbc.position() != (N + n));
             System.out.printf("   sbc[4]: bb[%d]=%d, bb1[0]=%d%n",
                               N, bb.get(N) & 0xff, bb2.get(0) & 0xff);
         }
@@ -1079,45 +1110,7 @@ public class ZipFSTester {
         Path path = fs.getPath(name);
         Path parent = path.getParent();
         if (parent != null && Files.notExists(parent))
-            mkdirs(parent);
+            Files.createDirectories(parent);
         return path;
     }
-
-    /**
-     * Tests if certain methods throw a NullPointerException if invoked with null
-     * as specified in java.nio.file.package-info.java
-     * @param fs file system containing at least one ZipFileStore
-     *
-     * @see 8299864
-     */
-    static void testFileStoreNullArgs(FileSystem fs)  {
-        FileStore store = fs.getFileStores().iterator().next();
-
-        // Make sure we are testing the right thing
-        if (!"jdk.nio.zipfs.ZipFileStore".equals(store.getClass().getName()))
-            throw new AssertionError(store.getClass().getName());
-
-        assertThrowsNPE(() -> store.supportsFileAttributeView((String) null));
-        assertThrowsNPE(() -> store.supportsFileAttributeView((Class<? extends FileAttributeView>) null));
-        assertThrowsNPE(() -> store.getAttribute(null));
-        assertThrowsNPE(() -> store.getFileStoreAttributeView(null));
-    }
-
-    @FunctionalInterface
-    private interface ThrowingRunnable {
-        void run() throws Exception;
-    }
-
-    static void assertThrowsNPE(ThrowingRunnable r) {
-        try {
-            r.run();
-            // Didn't throw an exception
-            throw new AssertionError();
-        } catch (NullPointerException expected) {
-            // happy path
-        } catch (Exception e) {
-            throw new AssertionError(e);
-        }
-    }
-
 }
